@@ -1,4 +1,5 @@
 package com.example.CarRentalApp;
+
 import com.example.CarRentalApp.dto.CarDTO;
 import com.example.CarRentalApp.mapper.CarMapper;
 import com.example.CarRentalApp.model.Car;
@@ -7,127 +8,94 @@ import com.example.CarRentalApp.repository.ReservationRepo;
 import com.example.CarRentalApp.service.CarService;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
-import java.util.ArrayList;
-import java.util.Arrays;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.context.SpringBootTest;
+
 import java.util.List;
 import java.util.Optional;
-import static com.example.CarRentalApp.model.Car.CarStatus.*;
-import static com.example.CarRentalApp.model.Car.CarType.*;
-import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.Mockito.*;
 
+import static com.example.CarRentalApp.model.Car.CarStatus.AVAILABLE;
+import static com.example.CarRentalApp.model.Car.CarType.ECONOMY;
+import static org.junit.jupiter.api.Assertions.*;
+
+@SpringBootTest
 class CarServiceTests {
 
-    @Mock
+    @Autowired
+    private CarService carService;
+
+    @Autowired
     private CarRepo carRepo;
 
-    @Mock
+    @Autowired
     private ReservationRepo reservationRepo;
 
-    @Mock
+    @Autowired
     private CarMapper carMapper;
-
-    @InjectMocks
-    private CarService carService;
 
     @BeforeEach
     void setUp() {
-        MockitoAnnotations.openMocks(this);
+        carRepo.deleteAll();
+        reservationRepo.deleteAll();
     }
 
     @Test
     void testGetCar() {
-       
-        String carId = "12345";
-        Car mockCar = new Car(carId, "123ABC", 4, "Toyota", "Corolla", 20000, "Automatic", 50, ECONOMY);
-        CarDTO expectedDTO = new CarDTO(carId, "Toyota", "Corolla", ECONOMY, 20000, "Automatic", 50);
+        Car car = new Car("12345", "123ABC", 4, "Toyota", "Corolla", 20000, "Automatic", 50, ECONOMY);
+        carRepo.save(car);
 
-        when(carRepo.findById(carId)).thenReturn(Optional.of(mockCar));
-        when(carMapper.carToCarDTO(mockCar)).thenReturn(expectedDTO);
+        CarDTO result = carService.getCar("12345");
 
-        CarDTO result = carService.getCar(carId);
-
-        assertNotNull(result, "Result should not be null");
-        assertEquals(expectedDTO.getBarcode(), result.getBarcode(), "Car ID should match");
-        verify(carRepo, times(1)).findById(carId);
-        verify(carMapper, times(1)).carToCarDTO(mockCar);
+        assertNotNull(result);
+        assertEquals("12345", result.getBarcode());
     }
 
     @Test
     void testSaveCar() {
-       
         CarDTO inputDTO = new CarDTO("12345", "Toyota", "Corolla", ECONOMY, 20000, "Automatic", 50);
-        Car mockCar = new Car("12345", "123ABC", 4, "Toyota", "Corolla", 20000, "Automatic", 50, ECONOMY);
-        Car savedCar = new Car("12345", "123ABC", 4, "Toyota", "Corolla", 20000, "Automatic", 50, ECONOMY);
-        CarDTO expectedDTO = new CarDTO("12345", "Toyota", "Corolla", ECONOMY, 20000, "Automatic", 50);
-
-        when(carMapper.carDTOToCar(inputDTO)).thenReturn(mockCar);
-        when(carRepo.save(mockCar)).thenReturn(savedCar);
-        when(carMapper.carToCarDTO(savedCar)).thenReturn(expectedDTO);
 
         CarDTO result = carService.saveCar(inputDTO);
 
-        assertNotNull(result, "Result should not be null");
-        assertEquals(expectedDTO.getBarcode(), result.getBarcode(), "Car ID should match");
-        verify(carRepo, times(1)).save(mockCar);
-        verify(carMapper, times(1)).carDTOToCar(inputDTO);
-        verify(carMapper, times(1)).carToCarDTO(savedCar);
+        assertNotNull(result);
+        assertEquals("12345", result.getBarcode());
+        Optional<Car> savedCar = carRepo.findById("12345");
+        assertTrue(savedCar.isPresent());
     }
 
     @Test
     void testGetCars() {
-    
         Car car1 = new Car("12345", "123ABC", 4, "Toyota", "Corolla", 20000, "Automatic", 50, ECONOMY);
-        Car car2 = new Car("67890", "456DEF", 5, "Honda", "Civic", 30000, "Manual", 60, STANDARD);
-        CarDTO dto1 = new CarDTO("12345", "Toyota", "Corolla", ECONOMY, 20000, "Automatic", 50);
-        CarDTO dto2 = new CarDTO("67890", "Honda", "Civic", STANDARD, 30000, "Manual", 60);
-
-        when(carRepo.findAll()).thenReturn(Arrays.asList(car1, car2));
-        when(carMapper.carToCarDTO(car1)).thenReturn(dto1);
-        when(carMapper.carToCarDTO(car2)).thenReturn(dto2);
+        Car car2 = new Car("67890", "456DEF", 5, "Honda", "Civic", 30000, "Manual", 60, ECONOMY);
+        carRepo.saveAll(List.of(car1, car2));
 
         List<CarDTO> result = carService.getCars();
 
-        assertNotNull(result, "Result should not be null");
-        assertEquals(2, result.size(), "Result should contain 2 cars");
-        verify(carRepo, times(1)).findAll();
-        verify(carMapper, times(1)).carToCarDTO(car1);
-        verify(carMapper, times(1)).carToCarDTO(car2);
+        assertNotNull(result);
+        assertEquals(2, result.size());
     }
 
     @Test
     void testSearchAvailableCars() {
-   
         Car car1 = new Car("12345", "123ABC", 4, "Toyota", "Corolla", 20000, "Automatic", 50, ECONOMY);
-        CarDTO dto1 = new CarDTO("12345", "Toyota", "Corolla", ECONOMY, 20000, "Automatic", 50);
-
-        when(carRepo.findByStatus(AVAILABLE)).thenReturn(List.of(car1));
-        when(carMapper.carToCarDTO(car1)).thenReturn(dto1);
+        car1.setCarStatus(AVAILABLE);
+        carRepo.save(car1);
 
         List<CarDTO> result = carService.searchAvailableCars(ECONOMY, "Automatic");
 
-        assertNotNull(result, "Result should not be null");
-        assertEquals(1, result.size(), "Result should contain 1 car");
-        verify(carRepo, times(1)).findByStatus(AVAILABLE);
-        verify(carMapper, times(1)).carToCarDTO(car1);
+        assertNotNull(result);
+        assertEquals(1, result.size());
+        assertEquals("12345", result.get(0).getBarcode());
     }
 
     @Test
     void testDeleteCar() {
-     
-        Car mockCar = new Car("12345", "123ABC", 4, "Toyota", "Corolla", 20000, "Automatic", 50, ECONOMY);
-
-        when(carRepo.findByBarcode("12345")).thenReturn(mockCar);
-        when(reservationRepo.findByCar(mockCar)).thenReturn(new ArrayList<>());
+        Car car = new Car("12345", "123ABC", 4, "Toyota", "Corolla", 20000, "Automatic", 50, ECONOMY);
+        carRepo.save(car);
 
         boolean result = carService.deleteCar("12345");
 
-        assertTrue(result, "Car should be deleted successfully");
-        verify(carRepo, times(1)).findByBarcode("12345");
-        verify(carRepo, times(1)).delete(mockCar);
-        verify(reservationRepo, times(1)).findByCar(mockCar);
+        assertTrue(result);
+        Optional<Car> deletedCar = carRepo.findById("12345");
+        assertFalse(deletedCar.isPresent());
     }
 }
